--- a/src/app/selfModule/share/ztw-text-editor/text-editor/text-editor.component.css
+++ b/src/app/selfModule/share/ztw-text-editor/text-editor/text-editor.component.css
@@ -1,11 +1,11 @@
 div[contenteditable]{
   overflow: auto;
 }
+
 .container1{
-  border:1px solid gainsboro;
+  border:1px solid #ddd;
   padding:5px 0 5px 5px;
   border-radius:5px;
-  color:black;
 }
 .txt2{
   position:absolute;
@@ -22,9 +22,7 @@ div[contenteditable]{
   left:50%;
   transform:translateX(-50%);
 }
-:host{
-  display:inline-block;
-}
+
 :host /deep/ .mr1{
   margin-right:1rem;
 }
