--- a/src/sass/user-article.scss
+++ b/src/sass/user-article.scss
@@ -5,6 +5,7 @@ article{
   word-break:break-all;
 }
 .article{
+  font-family: "Microsoft YaHei UI" , Arial;
   & pre{
     white-space:pre-wrap;
   }
