--- a/src/app/router/plate/publish/publish.component.css
+++ b/src/app/router/plate/publish/publish.component.css
@@ -17,6 +17,12 @@
   width:200px;
 
 }
-.btnGp .btn{
-  border-radius:0;
+
+.editBtn{
+  width:100%;
+  height:30px;
+  overflow:hidden;
+}
+.editBtn .btn{
+  height:30px;
 }
