better-db-retore-fix-shake

--- a/src/app/selfModule/share/component/article-card/article-card.component.html
+++ b/src/app/selfModule/share/component/article-card/article-card.component.html
@@ -27,11 +27,11 @@
     <div class="full">{{i.cd |time}}</div>
   </div>
 </div>
-<div class="text-sm f1 row pt-1 hidden-lg-up full">
-  <div class="col-2 center">
-
+<div class="f1 text-sm row pt-1 hidden-lg-up flex-1">
+  aaa
+  <div class="col-1 center">
   </div>
-  <div class="col-7">
+  <div class="col-8">
     <i class="fa fa-comment-o"></i>
     {{i.lrd|time}}
   </div>
