--- a/src/sass.scss
+++ b/src/sass.scss
@@ -1,5 +1,12 @@
-html{
+html,body{
   font-size:15px;
+  overflow:auto;
+  height:100%;
+  margin:0;
+}
+body{
+  position:relative;
+  overflow-x:hidden;
 }
 @import 'sass/variable';
 @import 'sass/text-modal';
