--- a/src/app/router/plate/article/tool-box/tool-box.component.html
+++ b/src/app/router/plate/article/tool-box/tool-box.component.html
@@ -1,4 +1,4 @@
- <span [class.opacity]="!isOpen"  (mouseenter)="open()" (mouseleave)="close()" #mydrop="ztw-dropdown" class="btn btn-primary" pure="1" ztw-dropdown placement="tpLeft">
+ <span [class.opacity]="!isOpen"  (mouseenter)="open()" (mouseleave)="close()" #mydrop="ztw-dropdown" class="btn btn-primary btn-round" pure="1" ztw-dropdown placement="tpLeft">
    <i class="fa fa-th-large"></i>
    <div style="overflow:hidden" [@Width] class="grow btn-group"  *ztw-dropdown-menu>
      <button (click)="reply()" class="btn btn-primary btn-sm">回复</button>
