--- a/src/app/router/plate/publish/publish.component.html
+++ b/src/app/router/plate/publish/publish.component.html
@@ -34,7 +34,7 @@
   <span class="btn btn-warning btn-sm" (click)="closeW()">取消</span>
 </ztw-alert>
 <div class="parent edit1 bg-0">
-  <ztw-text-editor #textEditor disUpload="true">
+  <ztw-text-editor #textEditor disUpload="true" class="publish-editor">
     <my-strategy textEditorBtn></my-strategy>
   </ztw-text-editor>
   <div  class="draft center" [@SlideX]="showDraft?'show':'hidden'">
