--- a/src/app/selfModule/share/ztw-text-editor/button/href/href.component.html
+++ b/src/app/selfModule/share/ztw-text-editor/button/href/href.component.html
@@ -1,5 +1,6 @@
-
-  <i class="color-dark fa fa-link"></i>
+<button class="btn0 btn-icon">
+<i class="color-dark fa fa-link"></i>
+</button>
 <ng-template #tp>
   <div class="input-group">
     <label class="input-group-addon"><i class="fa fa-link"></i></label>
