--- a/src/app/selfModule/share/min-modal/min-modal.component.html
+++ b/src/app/selfModule/share/min-modal/min-modal.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="bgShow" class="center full abs" style="position:fixed;z-index:5;">
-<div (@Pop.done)="isClose?bgShow=false:0" [@Pop]="modalShow?'show':'hidden'" class="ztwBlock parent">
+<div (@SlideRightToggle.done)="isClose?bgShow=false:0" [@SlideRightToggle]="modalShow?'show':'hidden'" class="ztwBlock parent">
       <b (click)="close()" class="closeBtn cb" >
         <i class="fa fa-close"> </i>
       </b>
