--- a/src/sass/_screen.scss
+++ b/src/sass/_screen.scss
@@ -22,7 +22,10 @@ $article-fontSize:(
   md:.9rem,
   lg:1rem
 );
-@mixin sm-text-modal(){
+
+
+
+@mixin sm-text-editor(){
   .text-modal-container{
     position:fixed !important;
     z-index:200;
@@ -40,12 +43,16 @@ $article-fontSize:(
   .text-modal-back{
     visibility:visible;
   }
-}
-@mixin publish-editor-height(){
   .publish-editor{
     height:250px;
   }
+  ztw-text-editor{
+    & .txt2{
+      height:150px;
+    }
+  }
 }
+
 @each $abbrev,$size in $screen{
   $screen-val:map-get($screen,$abbrev);
   $limit:nth($screen-val,1);
@@ -71,8 +78,14 @@ $article-fontSize:(
     }
     //text-editor modal
     @if ($abbrev ==sm){
-      @include sm-text-modal();
-      @include publish-editor-height();
+      @include sm-text-editor();
+      @include homeCard-sm();
+      @include editor-screen-sm();
+      @include textModal-screen-sm();
+      .container{
+        padding-left:5px;
+        padding-right:5px;
+      }
     }
     //article img width;
     .article{
